[gd_scene load_steps=48 format=2]

[ext_resource path="res://src/Actors/Bosses/BossAI.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Enemies/Shared/LongBossDeath.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Actors/Modules/Enemy/BossDamage.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Enemies/EnemyIdle.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/InheritorAnimatedSprite.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Bosses/KingCrab/KingCrabWalk.gd" type="Script" id=7]
[ext_resource path="res://KingCrabArmShot.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Bosses/KingCrab/KingCrabIntro.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Panda.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Bosses/KingCrab/MissileClaw.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/Actors/actual_center.gd" type="Script" id=12]
[ext_resource path="res://src/AchievementSystem/BossAchievementHandler.gd" type="Script" id=13]
[ext_resource path="res://src/AchievementSystem/Achievements/BEATINTRO.tres" type="Resource" id=14]
[ext_resource path="res://src/Actors/Bosses/boss_sprites/crab_shooter.res" type="SpriteFrames" id=15]
[ext_resource path="res://src/Actors/Bosses/boss_sprites/crab_leg.res" type="SpriteFrames" id=16]
[ext_resource path="res://src/Actors/Bosses/boss_sprites/crab.res" type="SpriteFrames" id=17]
[ext_resource path="res://src/Actors/Bosses/KingCrab/headcrab.res" type="SpriteFrames" id=18]
[ext_resource path="res://src/Sounds/HIT_BOSS.wav" type="AudioStream" id=21]
[ext_resource path="res://src/Effects/Materials/default_material.tres" type="Material" id=22]
[ext_resource path="res://src/Actors/Enemies/EnemyShield.gd" type="Script" id=25]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=26]
[ext_resource path="res://src/Actors/Bosses/KingCrab/KingCrabShieldClaw.gd" type="Script" id=27]
[ext_resource path="res://src/Sounds/EXPLOSION.wav" type="AudioStream" id=28]
[ext_resource path="res://src/Effects/ShieldBreak/shieldbreak.res" type="SpriteFrames" id=29]
[ext_resource path="res://src/Actors/Bosses/KingCrab/KingCrabStun.gd" type="Script" id=30]
[ext_resource path="res://src/Actors/Bosses/KingCrab/ClawAttack.tscn" type="PackedScene" id=31]
[ext_resource path="res://src/Sounds/49 - MMX - Press Close.ogg" type="AudioStream" id=32]
[ext_resource path="res://src/Sounds/60 - MMX - Enemy Missile Fire.wav" type="AudioStream" id=33]
[ext_resource path="res://src/Sounds/Clawshield Prepare.ogg" type="AudioStream" id=34]
[ext_resource path="res://src/Sounds/94 - MMX - eyesflash.ogg" type="AudioStream" id=35]
[ext_resource path="res://src/Sounds/KingCrab - Missile Prepare.ogg" type="AudioStream" id=36]
[ext_resource path="res://src/Sounds/KingCrab - Footstep.ogg" type="AudioStream" id=37]
[ext_resource path="res://src/Sounds/Yeti - Stomp.ogg" type="AudioStream" id=38]
[ext_resource path="res://src/Sounds/Yeti - Jump.ogg" type="AudioStream" id=39]
[ext_resource path="res://src/Sounds/Yeti - Uppercut.ogg" type="AudioStream" id=40]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=41]
[ext_resource path="res://src/Actors/Bosses/KingCrab/KingCrabFeet.gd" type="Script" id=42]
[ext_resource path="res://src/Actors/Bosses/KingCrab/legcrab.res" type="SpriteFrames" id=43]
[ext_resource path="res://src/Actors/Enemies/SimpleProjectile.tscn" type="PackedScene" id=44]
[ext_resource path="res://src/Sounds/LEMON_SHOT2.wav" type="AudioStream" id=45]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70.5, 78.5 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( -64, -32, -64, -180, 48, -180, 64, -100, 132, -32 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 15.75, 52 )

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 10, 46 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 34, 13.5 )

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 38.5, 61 )

[node name="KingCrab" type="KinematicBody2D" groups=["Bosses"]]
z_index = 4
collision_layer = 8
script = ExtResource( 10 )
max_health = 90.0
things_to_hide_on_death = [ NodePath("animatedSprite/LegShooter") ]

[node name="actual_center" type="Node2D" parent="."]
position = Vector2( -52, -133 )
script = ExtResource( 12 )
damage = NodePath("../Damage")

[node name="BossAI" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -78.5 )
shape = SubResource( 1 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
material = ExtResource( 22 )
position = Vector2( -1, -96 )
z_index = 2
frames = ExtResource( 18 )
animation = "idle"
frame = 13
playing = true
flip_h = true

[node name="animatedSprite" type="AnimatedSprite" parent="animatedSprite"]
pause_mode = 2
z_index = -2
frames = ExtResource( 17 )
animation = "shieldclaw_loop"
playing = true
flip_h = true
script = ExtResource( 6 )

[node name="LegShooter" type="AnimatedSprite" parent="animatedSprite"]
position = Vector2( -25, 33 )
frames = ExtResource( 43 )
animation = "close"
frame = 5
script = ExtResource( 42 )
projectile = ExtResource( 44 )

[node name="shot_sound" type="AudioStreamPlayer2D" parent="animatedSprite/LegShooter"]
stream = ExtResource( 45 )
volume_db = -10.0
pitch_scale = 1.47
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="area2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
visible = false
shape = SubResource( 45 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.5, 3.5 )
scale = Vector2( 4.35, 4.25 )

[node name="Intro" type="Node2D" parent="."]
script = ExtResource( 9 )
actions = [ "Event" ]
animation = "fall"
start_event = "boss_cutscene_start"
global_event = true
force_start = true
skip_intro = false

[node name="jump" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 39 )
volume_db = -8.262
pitch_scale = 0.88
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="land" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 32 )
volume_db = -6.0
pitch_scale = 0.9
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="eyeFlash" type="AudioStreamPlayer2D" parent="Intro"]
stream = ExtResource( 35 )
volume_db = -9.115
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 4 )
conflicting_moves = [ "Anything" ]
should_turn = false

[node name="ShieldClaw" type="Node2D" parent="."]
position = Vector2( 0, -124 )
script = ExtResource( 27 )
actions = [ "Event" ]
animation = "shieldclaw_setup"
claw_attack = ExtResource( 31 )

[node name="prepare" type="AudioStreamPlayer2D" parent="ShieldClaw"]
stream = ExtResource( 34 )
volume_db = -5.0
pitch_scale = 0.88
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="wallhit" type="AudioStreamPlayer2D" parent="ShieldClaw"]
stream = ExtResource( 38 )
volume_db = -5.0
pitch_scale = 1.15
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="footstep" type="AudioStreamPlayer2D" parent="ShieldClaw"]
stream = ExtResource( 37 )
volume_db = -5.0
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="footstep2" type="AudioStreamPlayer2D" parent="ShieldClaw"]
stream = ExtResource( 37 )
volume_db = -5.0
pitch_scale = 1.12
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyShield" type="Node2D" parent="ShieldClaw"]
script = ExtResource( 25 )
active = false

[node name="hittable_area" type="Area2D" parent="ShieldClaw/EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="ShieldClaw/EnemyShield/hittable_area"]
position = Vector2( 118, 9 )
shape = SubResource( 53 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="ShieldClaw/EnemyShield"]
stream = ExtResource( 26 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="DamageOnTouch" type="Node2D" parent="ShieldClaw"]
position = Vector2( -123, 9 )
script = ExtResource( 5 )
active = false
debug_logs = true
damage = 3.0

[node name="area2D" type="Area2D" parent="ShieldClaw/DamageOnTouch"]
collision_layer = 0
collision_mask = 2
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="ShieldClaw/DamageOnTouch/area2D"]
shape = SubResource( 54 )

[node name="ArmShot" type="Node2D" parent="."]
position = Vector2( 59, -47 )
script = ExtResource( 8 )
actions = [ "Event" ]
animation = "missileclaw_prepare"
Projectile = ExtResource( 11 )

[node name="prepare" type="AudioStreamPlayer2D" parent="ArmShot"]
stream = ExtResource( 36 )
volume_db = -5.0
pitch_scale = 1.15
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="shot" type="AudioStreamPlayer2D" parent="ArmShot"]
stream = ExtResource( 33 )
volume_db = -5.0
pitch_scale = 0.58
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="receive" type="AudioStreamPlayer2D" parent="ArmShot"]
stream = ExtResource( 40 )
volume_db = -5.0
pitch_scale = 1.36
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="nhecosound" type="AudioStreamPlayer2D" parent="ArmShot"]
stream = ExtResource( 41 )
volume_db = -5.0
pitch_scale = 1.41
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="Walk" type="Node2D" parent="."]
script = ExtResource( 7 )
actions = [ "Event" ]
max_distance = 76

[node name="footstep" type="AudioStreamPlayer2D" parent="Walk"]
stream = ExtResource( 37 )
volume_db = -3.0
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="footstep2" type="AudioStreamPlayer2D" parent="Walk"]
stream = ExtResource( 37 )
volume_db = -3.0
pitch_scale = 1.12
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="WalkBackwards" type="Node2D" parent="."]
script = ExtResource( 7 )
active = false
actions = [ "Event" ]
max_distance = 76

[node name="footstep" type="AudioStreamPlayer2D" parent="WalkBackwards"]
stream = ExtResource( 37 )
volume_db = -5.0
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="footstep2" type="AudioStreamPlayer2D" parent="WalkBackwards"]
stream = ExtResource( 37 )
volume_db = -5.0
pitch_scale = 1.12
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="BossDeath" parent="." instance=ExtResource( 2 )]
collectible = "finished_intro"

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 3 )
invulnerability_time = 0.1
ignore_nearby_hits = false
max_flash_time = 0.35
debugging = true

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
pause_mode = 2
stream = ExtResource( 21 )
volume_db = -5.0
max_distance = 600.0
bus = "SFX"

[node name="area2D" type="Area2D" parent="Damage"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="Damage/area2D"]
position = Vector2( -37, -132.5 )
shape = SubResource( 49 )

[node name="DamageOnTouch" type="Node2D" parent="."]
visible = false
script = ExtResource( 5 )
damage = 6.0

[node name="area2D" type="Area2D" parent="DamageOnTouch"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionPolygon2D" type="CollisionPolygon2D" parent="DamageOnTouch/area2D"]
polygon = PoolVector2Array( 129, -25, 59, -103, 46, -178, -51, -178, -85, -26 )

[node name="animatedSprite2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -25, -63 )
frames = ExtResource( 16 )
animation = "open"
frame = 7

[node name="animatedSprite3" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -48, -75 )
frames = ExtResource( 15 )
animation = "open"
frame = 25
playing = true

[node name="EnemyShield" type="Node2D" parent="."]
position = Vector2( 0, -153 )
script = ExtResource( 25 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
position = Vector2( -46.5, 45 )
shape = SubResource( 52 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 26 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="EnemyStun" type="Node2D" parent="."]
script = ExtResource( 30 )
actions = [ "Event" ]
animation = "shieldclaw_break"
recover_animation = "fall"
shield_to_disable = NodePath("../EnemyShield")

[node name="break_vfx" type="AnimatedSprite" parent="EnemyStun"]
modulate = Color( 1, 1, 1, 0.670588 )
position = Vector2( 119, -114 )
z_index = 25
frames = ExtResource( 29 )
frame = 9

[node name="break_sound" type="AudioStreamPlayer2D" parent="EnemyStun"]
stream = ExtResource( 28 )
volume_db = 1.034
pitch_scale = 0.78
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="AchievementHandler" type="Node" parent="."]
script = ExtResource( 13 )
defeated_any = false
perfect_kill = false
defeated = ExtResource( 14 )

[connection signal="guard_break" from="." to="EnemyStun" method="_on_KingCrab_guard_break"]
[connection signal="zero_health" from="." to="animatedSprite/animatedSprite" method="_on_KingCrab_zero_health"]
