[gd_scene load_steps=38 format=2]

[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/MeleeEnemyAttack.gd" type="Script" id=2]
[ext_resource path="res://src/Sounds/FX - GenesisLaser.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Effects/Textures/shining_ball.png" type="Texture" id=4]
[ext_resource path="res://src/Effects/Textures/lumine_ray.png" type="Texture" id=5]
[ext_resource path="res://src/Effects/Textures/shining_counter.png" type="Texture" id=6]
[ext_resource path="res://src/Actors/Bosses/SecretBoss2/DamageReflector.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Enemies/EnemyShield.gd" type="Script" id=8]
[ext_resource path="res://src/Sounds/MMX - Enemy Helmet Hit.ogg" type="AudioStream" id=9]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 6 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 6 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 6 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 6 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 6 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 6 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 5 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "fire",
"speed": 24.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), null, SubResource( 19 ), null, null ],
"loop": true,
"name": "ready",
"speed": 22.0
} ]

[sub_resource type="RectangleShape2D" id=33]
extents = Vector2( 10, 4 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=35]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "explode",
"speed": 24.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 17, 20 )

[node name="DamageReflector" type="Node2D"]
z_index = 20
script = ExtResource( 7 )

[node name="laser" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 20, 1 )
z_index = -1
frames = SubResource( 32 )
animation = "ready"
frame = 5
speed_scale = 2.0
playing = true
offset = Vector2( 16, 0 )

[node name="damage" type="Node2D" parent="laser"]
script = ExtResource( 2 )
active = false
damage = 16.0
active_duration = 0.032
owner_character = NodePath("../..")

[node name="area2D" type="Area2D" parent="laser/damage"]

[node name="collisionShape2D" type="CollisionShape2D" parent="laser/damage/area2D"]
visible = false
position = Vector2( 9.99496, 0 )
shape = SubResource( 33 )

[node name="ball" type="AnimatedSprite" parent="."]
frames = SubResource( 35 )
animation = "explode"
frame = 5
playing = true

[node name="prepare" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
max_distance = 600.0
bus = "SFX"
script = ExtResource( 1 )

[node name="EnemyShield" type="Node2D" parent="."]
script = ExtResource( 8 )
breakable = false

[node name="hittable_area" type="Area2D" parent="EnemyShield"]
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="EnemyShield/hittable_area"]
shape = SubResource( 36 )

[node name="hitSound" type="AudioStreamPlayer2D" parent="EnemyShield"]
stream = ExtResource( 9 )
volume_db = -80.0
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[connection signal="shield_hit" from="EnemyShield" to="." method="_on_shield_hit"]
